# Agent-AI-system

./: .gitignore  LICENSE  README.md  requirements.txt
01_foundations/: README.md
01_foundations/agents/: README.md  huyen-agents.md
01_foundations/ai-engineering-summary/: Chapter_10_AI_Engineering.md  Chapter_1_Intro.md  Chapter_2_FMs.md  Chapter_3_Evaluation.md  Chapter_4_Evaluate_AI.md  Chapter_5_Prompt_Eng.md  Chapter_6_1_RAG.md  Chapter_6_2_Agents.md  Chapter_7_Finetuning.md  Chapter_8_Data_Eng.md  Chapter_9_Inference Optim.md  README.md
01_foundations/gen-AI/: huyen-Gen-AI-Platform.md  huyen-evaluation.md
01_foundations/llms/: fine_tuning+annotation.md  llm_training_workflow.md  llms-frameworks.md  transformer_architecture_variants.md
01_foundations/python /: modern_python.md
02_frameworks/: README.md
02_frameworks/5_crewai/code/starter_project/: README.md  pyproject.toml
02_frameworks/5_crewai/code/starter_project/src/starter_project/: __init__.py  crew.py  main.py
02_frameworks/5_crewai/code/starter_project/src/starter_project/config/: __init__.py  agents.yaml  tasks.yaml
02_frameworks/5_crewai/code/starter_project/src/starter_project/tools/: __init__.py  custom_tool.py
03_system_design/: README.md  SD_resources.md  chains.py
04_use_cases/: README.md
05_resources/: AI-stack.md  cookbooks.md  resources.md  stack-tools.md
code/: README.md
content/: README.md  [pv]verticals.md  huyen-Gen-AI-Platform.md  huyen-evaluation.md  llms-frameworks.md  modern_python.md  projects.md  protocols-AI.md  resources.md  stack-tools.md
(+216 files in other folders)
